[package]
name = "error-code"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
error-code-derive = { workspace = true }
[dev-dependencies]
darling = "0.20.10"
proc-macro2 = "1.0.86"
quote = "1.0.37"
syn = { version = "2.0.77", features = ["extra-traits"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
http = { workspace = true }
